# brain-tumor-classifier

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  brain_tumor_classifier_ref_2.ipynb  fix_install.sh  pyproject.toml  requirements.txt  setup.py  tb.sh
app/: routes.py
brain_tumor/: config.py  config_old.py
brain_tumor/data/: dataset.py
brain_tumor/evaluation/: gradcam.py  metrics.py  plots.py
brain_tumor/models/: checkpoint.py  classifier.py
brain_tumor/training/: engine.py  tensorboard.py
docs/: ARCHITECTURE.md  Incompatible TensorFlow version.docx
reports/: metrics_summary.json  misclassified.csv
src/app/: __init__.py  app.py  routes.py
src/app/templates/: index_flaskOnly
